--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ee",
+  "name": "excalidraw-desktop",
   "version": "4.1.0",
-  "description": "A fast, desktop software development framework",
+  "description": "Excalidraw 桌面版",
   "main": "./public/electron/main.js",
   "scripts": {
     "dev": "ee-bin dev",
