--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./public/electron/main.js",
   "scripts": {
     "dev": "ee-bin dev",
-    "build": "npm run build-electron && ee-bin encrypt",
+    "build": "npm run build-electron",
     "start": "ee-bin start",
     "dev-frontend": "ee-bin dev --serve=frontend",
     "build-frontend": "ee-bin build --cmds=frontend && ee-bin move --flag=frontend_dist",
@@ -13,11 +13,11 @@
     "encrypt": "ee-bin encrypt",
     "icon": "ee-bin icon",
     "re-sqlite": "electron-rebuild -f -w better-sqlite3",
-    "build-w": "ee-bin build --cmds=win64",
-    "build-we": "ee-bin build --cmds=win_e",
-    "build-m": "ee-bin build --cmds=mac",
-    "build-m-arm64": "ee-bin build --cmds=mac_arm64",
-    "build-l": "ee-bin build --cmds=linux",
+    "build-w": "cross-env NODE_ENV=local ee-bin build --cmds=win64",
+    "build-we": "cross-env NODE_ENV=local ee-bin build --cmds=win_e",
+    "build-m": "cross-env NODE_ENV=local ee-bin build --cmds=mac",
+    "build-m-arm64": "cross-env NODE_ENV=local ee-bin build --cmds=mac_arm64",
+    "build-l": "cross-env NODE_ENV=local ee-bin build --cmds=linux",
     "debug-dev": "cross-env DEBUG=ee-* ee-bin dev",
     "debug-encrypt": "ee-bin encrypt",
     "debug-electron": "cross-env DEBUG=ee-* ee-bin dev --serve=electron",
